--- a/Bricks Extermination/index.html
+++ b/Bricks Extermination/index.html
@@ -9,6 +9,7 @@
     <script src="/game.js" defer></script>
 </head>
 <body>
-    <canvas id="interface" width="800" height="500"></canvas>
+    <canvas id="interface" width="570" height="500"></canvas>
+    <div id="statistics">asfgadfghasdfh</div>
 </body>
 </html>
