--- a/Bricks Extermination/index.html
+++ b/Bricks Extermination/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <canvas id="interface" width="570" height="500"></canvas>
-    <div id="statistics">asfgadfghasdfh</div>
+    <div id="statistics"></div>
 </body>
 </html>
