--- a/Bricks Extermination/index.html
+++ b/Bricks Extermination/index.html
@@ -11,5 +11,16 @@
 <body>
     <canvas id="interface" width="570" height="500"></canvas>
     <div id="statistics"></div>
+    <div id="instructions">
+        <h3>
+            Upustvo za igru
+        </h3><hr>
+        <p>
+            <strong>Bricks Extermination</strong> je igrica u kojoj se lopticom razbijaju cigle i skupljaju bodovi. <strong>Bricks Extermination</strong> igrica se se sastoji od loptice, cigli, palice i kutije u kojoj se radnja igrice desava.
+            Loptica se odbija o zidove kutije i krece se kroz nju. Zadatak je ne dozvoliti loptici da udari u donji zid kutije, vec odbacivati lopticu sa dna uz pomoc palice koju kontrolisete uz pomoc misa.
+            <em>Imate 3 predvidjena zivota i 72 cigle za rusenje.</em>
+            <strong><em>Srecno!<hr></em></strong>
+        </p>
+    </div>
 </body>
 </html>
