--- a/Bricks Extermination/index.html
+++ b/Bricks Extermination/index.html
@@ -11,6 +11,7 @@
 <body>
     <canvas id="interface" width="570" height="500"></canvas>
     <div id="statistics"></div>
+    <button id="newGame">New Game</button>
     <div id="instructions">
         <h3>
             Upustvo za igru
